Change-Id: I646c5ef2521ee844586528d648a002424665ec69

--- a/web-boot/src/main/resources/templates/user/add.html
+++ b/web-boot/src/main/resources/templates/user/add.html
@@ -7,5 +7,6 @@
 <body>
 	<h2 th:text="${name}"></h2>hello
 	<h2 style="color: red">你好，中国！</h2>
+	<h2 style="color: green">测试一下</h2>
 </body>
 </html>
